packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_json_code_with_multiple_contracts.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: json
---
{
  "version": "0.0.1-dev",
  "name": "config2",
  "description": "Gravatar for Ethereum",
  "storage": {
    "postgres": true
  },
  "evm": {
    "chains": {
      "2": {
        "id": 2,
        "startBlock": 0,
        "rpcs": [
          {
            "url": "https://eth.com",
            "for": "sync",
            "initialBlockInterval": 10000,
            "backoffMultiplicative": 0.8,
            "accelerationAdditive": 2000,
            "intervalCeiling": 10000,
            "backoffMillis": 5000,
            "queryTimeoutMillis": 20000
          },
          {
            "url": "https://eth.com/fallback",
            "for": "sync",
            "initialBlockInterval": 10000,
            "backoffMultiplicative": 0.8,
            "accelerationAdditive": 2000,
            "intervalCeiling": 10000,
            "backoffMillis": 5000,
            "queryTimeoutMillis": 20000
          }
        ],
        "contracts": {
          "Contract2": {
            "addresses": [
              "0x1E645469f354BB4F5c8a05B3b30A929361cf77eC"
            ]
          }
        }
      },
      "ethereumMainnet": {
        "id": 1,
        "startBlock": 0,
        "rpcs": [
          {
            "url": "https://eth.com",
            "for": "sync",
            "initialBlockInterval": 10000,
            "backoffMultiplicative": 0.8,
            "accelerationAdditive": 2000,
            "intervalCeiling": 10000,
            "backoffMillis": 5000,
            "queryTimeoutMillis": 20000
          }
        ],
        "contracts": {
          "Contract1": {
            "addresses": [
              "0x2E645469f354BB4F5c8a05B3b30A929361cf77eC"
            ]
          }
        }
      }
    },
    "contracts": {
      "Contract1": {
        "abi": [{"type":"event","name":"NewGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false},{"type":"event","name":"UpdatedGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false}],
        "handler": "./src/EventHandler.js",
        "events": [
          {
            "name": "NewGravatar",
            "sighash": "0x9ab3aefb2ba6dc12910ac1bce4692cf5c3c0d06cff16327c64a3ef78228b130b",
            "params": [
              {
                "name": "id",
                "abiType": "uint256"
              },
              {
                "name": "owner",
                "abiType": "address"
              },
              {
                "name": "displayName",
                "abiType": "string"
              },
              {
                "name": "imageUrl",
                "abiType": "string"
              }
            ]
          },
          {
            "name": "UpdatedGravatar",
            "sighash": "0x76571b7a897a1509c641587568218a290018fbdc8b9a724f17b77ff0eec22c0c",
            "params": [
              {
                "name": "id",
                "abiType": "uint256"
              },
              {
                "name": "owner",
                "abiType": "address"
              },
              {
                "name": "displayName",
                "abiType": "string"
              },
              {
                "name": "imageUrl",
                "abiType": "string"
              }
            ]
          }
        ]
      },
      "Contract2": {
        "abi": [{"type":"event","name":"NewGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false},{"type":"event","name":"UpdatedGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false}],
        "handler": "./src/EventHandler.js",
        "events": [
          {
            "name": "NewGravatar",
            "sighash": "0x9ab3aefb2ba6dc12910ac1bce4692cf5c3c0d06cff16327c64a3ef78228b130b",
            "params": [
              {
                "name": "id",
                "abiType": "uint256"
              },
              {
                "name": "owner",
                "abiType": "address"
              },
              {
                "name": "displayName",
                "abiType": "string"
              },
              {
                "name": "imageUrl",
                "abiType": "string"
              }
            ]
          },
          {
            "name": "UpdatedGravatar",
            "sighash": "0x76571b7a897a1509c641587568218a290018fbdc8b9a724f17b77ff0eec22c0c",
            "params": [
              {
                "name": "id",
                "abiType": "uint256"
              },
              {
                "name": "owner",
                "abiType": "address"
              },
              {
                "name": "displayName",
                "abiType": "string"
              },
              {
                "name": "imageUrl",
                "abiType": "string"
              }
            ]
          }
        ]
      }
    },
    "addressFormat": "checksum"
  },
  "enums": {},
  "entities": [
    {
      "name": "EmptyEntity",
      "codeName": "EmptyEntity",
      "properties": [
        {
          "name": "id",
          "type": "string"
        },
        {
          "name": "emptyField",
          "type": "string"
        }
      ]
    }
  ]
}
