packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_json_code_with_no_contracts.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: json
---
{
  "version": "0.0.1-dev",
  "name": "config4",
  "description": "Gravatar for Ethereum",
  "storage": {
    "postgres": true
  },
  "evm": {
    "chains": {
      "ethereumMainnet": {
        "id": 1,
        "startBlock": 0,
        "hypersync": "https://myskar.com"
      },
      "polygon": {
        "id": 137,
        "startBlock": 0,
        "hypersync": "https://137.hypersync.xyz"
      }
    },
    "addressFormat": "checksum"
  },
  "enums": {},
  "entities": [
    {
      "name": "EmptyEntity",
      "codeName": "EmptyEntity",
      "properties": [
        {
          "name": "id",
          "type": "string"
        },
        {
          "name": "emptyField",
          "type": "string"
        }
      ]
    }
  ]
}
