packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__internal_config_json_code_with_per_event_field_selection.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
assertion_line: 2655
expression: project_template.internal_config_json_code
---
{
  "version": "0.0.1-dev",
  "name": "per-event-field-selection",
  "description": "Test config with per-event field selection",
  "evm": {
    "chains": {
      "ethereumMainnet": {
        "id": 1,
        "startBlock": 0,
        "rpcs": [
          {
            "url": "https://eth.com",
            "for": "sync",
            "initialBlockInterval": 10000,
            "backoffMultiplicative": 0.8,
            "accelerationAdditive": 2000,
            "intervalCeiling": 10000,
            "backoffMillis": 5000,
            "queryTimeoutMillis": 20000
          }
        ]
      }
    },
    "contracts": {
      "Contract1": {
        "abi": [{"type":"event","name":"NewGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false},{"type":"event","name":"UpdatedGravatar","inputs":[{"name":"id","type":"uint256","indexed":false},{"name":"owner","type":"address","indexed":false},{"name":"displayName","type":"string","indexed":false},{"name":"imageUrl","type":"string","indexed":false}],"anonymous":false}],
        "handler": "./src/EventHandler.js",
        "events": [
          {
            "event": "NewGravatar(uint256 id, address owner, string displayName, string imageUrl)",
            "sighash": "0x9ab3aefb2ba6dc12910ac1bce4692cf5c3c0d06cff16327c64a3ef78228b130b",
            "topicCount": 1,
            "blockFields": [
              "number",
              "timestamp",
              "hash",
              "ParentHash",
              "Miner"
            ],
            "transactionFields": [
              "Hash",
              "From",
              "Value"
            ]
          },
          {
            "event": "UpdatedGravatar(uint256 id, address owner, string displayName, string imageUrl)",
            "sighash": "0x76571b7a897a1509c641587568218a290018fbdc8b9a724f17b77ff0eec22c0c",
            "topicCount": 1
          }
        ]
      }
    },
    "addressFormat": "checksum",
    "globalBlockFields": [
      "number",
      "timestamp",
      "hash",
      "ParentHash"
    ],
    "globalTransactionFields": [
      "Hash"
    ]
  },
  "enums": {
    "Status": [
      "ACTIVE",
      "INACTIVE"
    ]
  },
  "entities": [
    {
      "name": "EmptyEntity",
      "properties": [
        {
          "name": "id",
          "type": "string"
        },
        {
          "name": "emptyField",
          "type": "string"
        },
        {
          "name": "status",
          "type": "enum",
          "enum": "Status"
        },
        {
          "name": "optionalStatus",
          "type": "enum",
          "isNullable": true,
          "enum": "Status"
        },
        {
          "name": "related",
          "type": "entity",
          "linkedEntity": "RelatedEntity",
          "entity": "RelatedEntity"
        },
        {
          "name": "optionalRelated",
          "type": "entity",
          "isNullable": true,
          "linkedEntity": "RelatedEntity",
          "entity": "RelatedEntity"
        },
        {
          "name": "tags",
          "type": "string",
          "isArray": true
        },
        {
          "name": "optionalTags",
          "type": "string",
          "isNullable": true,
          "isArray": true
        }
      ]
    },
    {
      "name": "RelatedEntity",
      "properties": [
        {
          "name": "id",
          "type": "string"
        },
        {
          "name": "name",
          "type": "string"
        }
      ]
    }
  ]
}
