packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__svm_block_ts_type_renders_optionality_and_unselected.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: generated
---
{
  /** The slot field. */
  readonly slot: number;
  /**
   * @deprecated Not selected for this instruction. Add it to fields.block on the handler registration.
   */
  readonly time: FieldNotSelected<"Field 'time' is not selected for the 'Swap' instruction. Add it to fields.block in the registration options.">;
  /**
   * @deprecated Not selected for this instruction. Add it to fields.block on the handler registration.
   */
  readonly hash: FieldNotSelected<"Field 'hash' is not selected for the 'Swap' instruction. Add it to fields.block in the registration options.">;
  /** The height field. */
  readonly height: number;
  /**
   * @deprecated Not selected for this instruction. Add it to fields.block on the handler registration.
   */
  readonly parentSlot: FieldNotSelected<"Field 'parentSlot' is not selected for the 'Swap' instruction. Add it to fields.block in the registration options.">;
  /**
   * @deprecated Not selected for this instruction. Add it to fields.block on the handler registration.
   */
  readonly parentHash: FieldNotSelected<"Field 'parentHash' is not selected for the 'Swap' instruction. Add it to fields.block in the registration options.">;
}
