packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__svm_transaction_ts_type_renders_optionality_and_unselected.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: generated
---
{
  /**
   * @deprecated Not selected for this instruction. To enable, add to config.yaml:
   * ```yaml
   * field_selection:
   *   transaction_fields:
   *     - transactionIndex
   * ```
   */
  readonly transactionIndex: FieldNotSelected<"Field 'transactionIndex' is not selected for the 'Swap' instruction. Add it under field_selection.transaction_fields in config.yaml.">;
  /** The signature field. */
  readonly signature: string;
  /** The feePayer field. */
  readonly feePayer: string;
  /**
   * @deprecated Not selected for this instruction. To enable, add to config.yaml:
   * ```yaml
   * field_selection:
   *   transaction_fields:
   *     - success
   * ```
   */
  readonly success: FieldNotSelected<"Field 'success' is not selected for the 'Swap' instruction. Add it under field_selection.transaction_fields in config.yaml.">;
  /** The err field. */
  readonly err: string | undefined;
  /**
   * @deprecated Not selected for this instruction. To enable, add to config.yaml:
   * ```yaml
   * field_selection:
   *   transaction_fields:
   *     - fee
   * ```
   */
  readonly fee: FieldNotSelected<"Field 'fee' is not selected for the 'Swap' instruction. Add it under field_selection.transaction_fields in config.yaml.">;
  /**
   * @deprecated Not selected for this instruction. To enable, add to config.yaml:
   * ```yaml
   * field_selection:
   *   transaction_fields:
   *     - computeUnitsConsumed
   * ```
   */
  readonly computeUnitsConsumed: FieldNotSelected<"Field 'computeUnitsConsumed' is not selected for the 'Swap' instruction. Add it under field_selection.transaction_fields in config.yaml.">;
  /**
   * @deprecated Not selected for this instruction. To enable, add to config.yaml:
   * ```yaml
   * field_selection:
   *   transaction_fields:
   *     - accountKeys
   * ```
   */
  readonly accountKeys: FieldNotSelected<"Field 'accountKeys' is not selected for the 'Swap' instruction. Add it under field_selection.transaction_fields in config.yaml.">;
  /**
   * @deprecated Not selected for this instruction. To enable, add to config.yaml:
   * ```yaml
   * field_selection:
   *   transaction_fields:
   *     - recentBlockhash
   * ```
   */
  readonly recentBlockhash: FieldNotSelected<"Field 'recentBlockhash' is not selected for the 'Swap' instruction. Add it under field_selection.transaction_fields in config.yaml.">;
  /**
   * @deprecated Not selected for this instruction. To enable, add to config.yaml:
   * ```yaml
   * field_selection:
   *   transaction_fields:
   *     - version
   * ```
   */
  readonly version: FieldNotSelected<"Field 'version' is not selected for the 'Swap' instruction. Add it under field_selection.transaction_fields in config.yaml.">;
  /**
   * @deprecated Not selected for this instruction. To enable, add to config.yaml:
   * ```yaml
   * field_selection:
   *   transaction_fields:
   *     - allSignatures
   * ```
   */
  readonly allSignatures: FieldNotSelected<"Field 'allSignatures' is not selected for the 'Swap' instruction. Add it under field_selection.transaction_fields in config.yaml.">;
  /** The tokenBalances field. */
  readonly tokenBalances: readonly { readonly account?: string; readonly mint?: string; readonly owner?: string; readonly decimals?: number; readonly preAmount?: bigint; readonly postAmount?: bigint }[];
}
